Changelog
=========

Minor Release 2.1.1 []

* fix for Ticket #88 - numpy masks
* better TAB completion for ipython (handles quotes, don't list private members)
* Fix for Ticket #81 = scanatble.stats output as list 
* ticket #64 - speed up of auto_poly_baseline
* fix for ticket #89 - export of IF sub-selections

Release Version 2.1.0 [2006-09-11]

* Processing of Multibeam MX data
* Line Catalogs for both plotting and setting rest frequencies
* median averaging
* support of circular polarisations
* binaries for fedora (core 3/5), debian, ubuntu, OSX (ppc,intel)
* text/arrow/line annonations for plotter
* export of fit parameters to text file
* disk based scantables for large data sets
* re-introduced custom quotients
* fixed major fitter bug
* fft flagging
* full support for MOPS data

Release Version 2.0 [2006-04-28]

* Major rework of internal data representation. Now supports IFs with
  different number of spectral channels. This has minimal effect on the
  user interface.
* Creation of a "selector" object used for data selection. Allow slicing of
  data in beam, IF, polarisation as well as selection via header values
  (e.g. Tsys). set_cursor is now invalid use set_selection instead.
* Scantables can be merged
* scantable.lines() has been removed. Set rest frequencies by value
  (This will change in 2.1)
* Multiple data files (e.g. rpf) can be read into a single scantable
* Polarmetric infrastructure improved to support most observing styles
  (linear feeds only)
* ability to convert to/store as Stokes
* Plotter can now only plot from a single scantable (use merge if necessary)
* ASCII (text) spectral output changed to be more usable
* Can change the source position coordinate frame
* Bug fixes
* auto_quotient is doing "closest in time reference"
* option auto-align in velocity when using average_time
* flagging on a per channel base


(Release 1.2.2)

* channel based flagging
* Added get_elevation, azimuth and parangle
* Added swap_lineas & invert_phase