@@ -70,7 +70,7 @@ ASAP>
 Bugs and enhancement requests can be submitted online, via the <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/newticket">
 <b class="asap">ASAP</b> project tracking page</a>. Please also check if the defect has already been submitted under
 <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/report/1">current tickets</a>.
-
+If the trac system tells you that your submission has been considered spam, please log in with the username "bugs" and password "mops".
 
 <h2>Documentation</h2>
 <b class="asap">ASAP</b> has a user guide for general use and telescope specific examples,
@@ -117,7 +117,7 @@ Please also consult the <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_as
   </li>
   <li><b class="asap">ASAP</b> source code is available through our subversion repository
     <pre>
-        svn co http://sourcecode.atnf.csiro.au/repos/asap/tags/Release2.1.1 asap2.1.1
+        svn co http://sourcecode.atnf.csiro.au/repos/asap/tags/asap2.1.1
     </pre>
   </li>
 </ul>
